Fixed alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,9 +4,22 @@ body{
 
 
 .greeting{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.wave{
+    width: 60px;
+    height: 60px;
+    margin-left: 8px;
+}
+
+h4{
     text-align: center;
-    font-family: Roboto;
-    
+    justify-content: center;
+
 }
 
 .search-bar{
@@ -27,7 +40,8 @@ body{
     padding: 20px;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
-    grid-template-columns: 250px 200px auto;
+    grid-template-columns: 70px 250px auto;
+    
 }
 
 .grid-item1{
